--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
             .stick-bottom { bottom: 0; }
         </style>
     </head>
-    <body class="hold-transition skin-blue-light fixed sidebar-mini">
+    <body class="hold-transition skin-red-light fixed sidebar-mini">
                <img src="images/black_ribbon_bottom_right.png" class="black-ribbon stick-bottom stick-right"/>
     <div class="wrapper">
       <header class="main-header">
         <!-- Logo -->
         <a href="index.html" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini" style="color: yellow"><b>M</b>S</span>
+          <span class="logo-mini" style="color: yellow"><b>M</b>1</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg" style="color: yellow"><b>Maintenance-</b>System v.1</span>
+          <span class="logo-lg" style="color: yellow"><b>Maintenance</b> v.1</span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
