--- a/login_page.html
+++ b/login_page.html
@@ -21,10 +21,10 @@
         <!-- iCheck for checkboxes and radio inputs -->
         <link rel="stylesheet" href="template/plugins/iCheck/all.css">
     </head>
-<body class="hold-transition login-page">
+    <body class="hold-transition login-page" style="background-color: #ea391e">
     <div class="login-box">
       <div class="login-logo">
-          <a href="#"><h2><b style="color: blue">RM-Loei System</b></h2></a>
+          <a href="#"><h2><b style="color: yellow">Maintenance System V.1.0</b></h2></a>
       </div><!-- /.login-logo -->
       <div class="login-box-body">
         <p class="login-box-msg">เข้าสู่ระบบเพื่อเริ่มใช้งาน</p>
