--- a/content/add_prods.html
+++ b/content/add_prods.html
@@ -60,5 +60,26 @@
         </div>
     </div>
     <div class="col-md-12" id="DR_content"></div>
-</div>
-<script src="js/add_prods.js" type="text/javascript"></script>
+    </div><script src="js/add_prods.js" type="text/javascript"></script>
+<script type="text/javascript">
+    function getURL(objN){
+	if(objN==null){
+		return window.location.href;
+	}else{
+		objN = objN.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
+		var regexS = "[\\?&]"+objN+"=([^&#]*)";
+		var regex = new RegExp( regexS );
+		var results = regex.exec( window.location.href );
+		if( results == null )
+			return "";
+		else
+			return results[1];
+	}
+}
+</script>
+<script type="text/javascript">
+    $(function () {
+        var data = getURL("data");
+        console.log(data);
+    });
+    </script>
