--- a/content/list_prods.html
+++ b/content/list_prods.html
@@ -60,7 +60,7 @@
 					editButton.innerHTML = "<img src='images/icon_set1/file.ico' width='25'>";
 					editButton.setAttribute("href","#");
 					//editButton.setAttribute("onclick","loadPage('#index_content','content/testSendDatat.php',{data: "+value+"});");
-                                        editButton.setAttribute("onclick","loadAjax('#index_content','content/testSendDatat.php','"+value+"','testLoad.html');");
+                                        editButton.setAttribute("onclick","loadAjax('#index_content','content/testSendDatat.php','"+value+"','content/testLoad.html');");
                                         
 
 					var cellDel = row.insertCell (-1);
