--- a/content/testLoad.html
+++ b/content/testLoad.html
@@ -15,7 +15,7 @@ and open the template in the editor.
         <script type="text/javascript">
     $(function () {
          $.getJSON('content/testSendDatat.php', function (dataTB) {
-             alert(dataTB.data);
+             alert("'"+dataTB.data+"'");
          });
     });
 </script>
