--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 $.ajax({
   url: pagesend,
   method: method,
-  data: {data: value},
+  data: {data: data},
   dataType: 'json', 
   success: function(result){
         $(content).empty().load(pageload);
