--- a/content/add_prods.html
+++ b/content/add_prods.html
@@ -60,7 +60,14 @@
         </div>
     </div>
     <div class="col-md-12" id="DR_content"></div>
-    </div><script src="js/add_prods.js" type="text/javascript"></script>
+    </div>
+
+<script src="js/add_prods.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $(function () {
+        AddProds();
+    });
+</script>
 <script type="text/javascript">
     function getURL(objN){
 	if(objN==null){
