--- a/index.html
+++ b/index.html
@@ -58,7 +58,27 @@
   data: {data: data},
   dataType: 'json', 
   success: function(result){
-        $(content).empty().load(pageload);
+        $(content).empty().append("<h2 style='color: blue'>เพิ่มครุภัณฑ์</h2>"+
+                                    "<ol class='breadcrumb'>"+
+                                    "<li><a href='index.php'><i class='fa fa-home'></i> หน้าหลัก</a></li>"+
+                                    "<li class='active'><i class='fa fa-envelope'></i> เพิ่มครุภัณฑ์</li>"+
+                                    "</ol>"+
+                                    "<div class='row'>"+
+                                    "<div class='col-md-12'>"+
+                                    "<div class='box box-primary box-solid'>"+
+                                    "<div class='box-header with-border'>"+
+                                    "<h4 class='box-title'> เพิ่มข้อมูลครุภัณฑ์ </h4></div>"+
+                                    "<div class='box-body' id='add_pd'><div class='col-md-12'><div class='col-md-6'>"+
+                                    "<div class='box box-primary box-solid'><div class='box-header with-border'>"+
+                                    "<h4 class='box-title'> ข้อมูลครุภัณฑ์ </h4></div><div class='box-body'><div id='DP_content'></div></div></div></div>"+
+                                    "<div class='col-md-6'><div class='box box-primary box-solid'><div class='box-header with-border'>"+
+                                    "<h4 class='box-title'> ข้อมูลการซื้อครุภัณฑ์ </h4></div><div class='box-body'><div id='DSP_content'></div></div></div></div></div>"+
+                                    "<div class='col-md-12'><div class='col-md-6'><div class='box box-primary box-solid'><div class='box-header with-border'>"+
+                                    "<h4 class='box-title'> ข้อมูลการรับประกันครุภัณฑ์ </h4></div><div class='box-body'><div id='DWP_content'></div></div></div></div>"+
+                                    "<div class='col-md-6'><div class='box box-primary box-solid'><div class='box-header with-border'>"+
+                                    "<h4 class='box-title'> ข้อมูลสถานที่ครุภัณฑ์ </h4></div><div class='box-body'><div id='DPP_content'></div>"+
+                                    "</div></div></div></div></div></div></div><div class='col-md-12' id='DR_content'></div></div>");
+    AddProds();
     }
 });
 }
@@ -122,6 +142,7 @@
                <!-- jQuery 2.1.4 -->
         <script src="template/plugins/jQuery/jQuery-2.1.4.min.js"></script>
     <script src="js/gen_menu.js" type="text/javascript"></script>
+    <script src="js/add_prods.js" type="text/javascript"></script>
     <script type="text/javascript">
             function getURL(objN){
 	if(objN==null){
