--- a/content/add_prods.html
+++ b/content/add_prods.html
@@ -1,23 +1,23 @@
-<h2 style="color: blue">เพิ่มครุภัณฑ์</h2>
+<!--<h2 style="color: blue">เพิ่มครุภัณฑ์</h2>
 <ol class="breadcrumb">
     <li><a href="index.php"><i class="fa fa-home"></i> หน้าหลัก</a></li>
     <li class="active"><i class="fa fa-envelope"></i> เพิ่มครุภัณฑ์</li>
 </ol>
 <div class="row">
     <div class="col-md-12">
-        <!-- ค้นหา -->
+         ค้นหา 
 
         <div class="box box-primary box-solid">
             <div class="box-header with-border">
                 <h4 class="box-title"> เพิ่มข้อมูลครุภัณฑ์ </h4>
-            </div><!-- /.box-header -->
+            </div> /.box-header 
             <div class="box-body" id="add_pd">
                 <div class="col-md-12">
                 <div class=" col-md-6">
                     <div class="box box-primary box-solid">
                         <div class="box-header with-border">
                             <h4 class="box-title"> ข้อมูลครุภัณฑ์ </h4>
-                        </div><!-- /.box-header -->
+                        </div> /.box-header 
                         <div class="box-body">
                             <div id="DP_content"></div>
                         </div>
@@ -27,7 +27,7 @@
                     <div class="box box-primary box-solid">
                         <div class="box-header with-border">
                             <h4 class="box-title"> ข้อมูลการซื้อครุภัณฑ์ </h4>
-                        </div><!-- /.box-header -->
+                        </div> /.box-header 
                         <div class="box-body">
                             <div id="DSP_content"></div>
                         </div>
@@ -39,7 +39,7 @@
                     <div class="box box-primary box-solid">
                         <div class="box-header with-border">
                             <h4 class="box-title"> ข้อมูลการรับประกันครุภัณฑ์ </h4>
-                        </div><!-- /.box-header -->
+                        </div> /.box-header 
                         <div class="box-body">
                             <div id="DWP_content"></div>
                         </div>
@@ -49,7 +49,7 @@
                     <div class="box box-primary box-solid">
                         <div class="box-header with-border">
                             <h4 class="box-title"> ข้อมูลสถานที่ครุภัณฑ์ </h4>
-                        </div><!-- /.box-header -->
+                        </div> /.box-header 
                         <div class="box-body">
                             <div id="DPP_content"></div>
                         </div>
@@ -60,12 +60,12 @@
         </div>
     </div>
     <div class="col-md-12" id="DR_content"></div>
-    </div>
+    </div>-->
 
 <script src="js/add_prods.js" type="text/javascript"></script>
 <script type="text/javascript">
     $(function () {
-        AddProds();
+        AddProds('#index_content');
     });
 </script>
 <script type="text/javascript">
