develop creat table class 10/11/60

--- a/content/list_prods.html
+++ b/content/list_prods.html
@@ -9,7 +9,7 @@
     var column1 = ["id","เลขครุภัณฑ์","ชื่อ","งาน","ติดตั้งเมื่อ","วันที่ย้าย","หมายเหตุ","สถานะ","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LP.php','content/testSendDatat.php',column1,'dbtb');
-              CTb.GetNewTableAjax('tableDiv','JsonData/DT_LP.php','content/testSendDatat.php',column1,'dbtab');
+              //CTb.GetNewTableAjax('tableDiv','JsonData/DT_LP.php','content/testSendDatat.php',column1,'dbtab');
               
 </script>
 <div class="row">
