--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
   success: function(result){
       if(getfunc=='AddProds'){
     AddProds(content,result);
+      }else if(getfunc=='AddRepair'){
+    AddRepair(content,result);
       }
     }
 });
@@ -77,7 +79,7 @@
         </style>
     </head>
     <body class="hold-transition skin-red-light fixed sidebar-mini">
-               <img src="images/black_ribbon_bottom_right.png" class="black-ribbon stick-bottom stick-right"/>
+<!--               <img src="images/black_ribbon_bottom_right.png" class="black-ribbon stick-bottom stick-right"/>-->
     <div class="wrapper">
       <header class="main-header">
         <!-- Logo -->
@@ -124,8 +126,11 @@
             </div>
                <!-- jQuery 2.1.4 -->
         <script src="template/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+<!-------------------------- My scripts -------------------------->       
     <script src="js/gen_menu.js" type="text/javascript"></script>
     <script src="js/add_prods.js" type="text/javascript"></script>
+    <script src="js/add_repair.js" type="text/javascript"></script>
+<!------------------------ End My scripts ------------------------>     
     <script type="text/javascript">
             function getURL(objN){
 	if(objN==null){
