--- a/content/list_repair_order.html
+++ b/content/list_repair_order.html
@@ -8,7 +8,7 @@
     //var column1 = '{"รายการความเสี่ยงที่รอ RM man มาตรวจสอบ":["เลขที่","รายการ","เกิดขึ้นเมื่อ","ได้รับเมื่อ"]}';
     var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","หมายเหตุ","อาการ","งาน","ความสำคัญ","ผู้แจ้ง","รับใบแจ้ง","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
-              CTb.GetNewTableAjax('contentTB','JsonData/DT_LRP.php','JsonData/tempSendData.php',column1,'AddRepair',true,true,'dbtb');
+              CTb.GetNewTableAjax('contentTB','JsonData/DT_LRP.php','JsonData/tempSendData.php',column1,'AddRepair',true,true,'#receiveModal','dbtb');
 </script>
 <div class="row">
     <div class="col-md-12">
@@ -25,6 +25,7 @@
             </div>
     </div>
 </div>
+<!---------------------------- Modal ---------------------------->
 <div class="modal fade" id="receiveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -32,33 +33,57 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="receiveModalLabel">รับใบแจ้งซ่อม</h4>
       </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="recipient-name" class="control-label">Recipient:</label>
-            <input type="text" class="form-control" id="recipient-name">
-          </div>
-          <div class="form-group">
-            <label for="message-text" class="control-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
-          </div>
-            <input type="hidden" class="form-control" id="repair_id">
-        </form>
+        <div class="modal-body" id="modelrepair">
+          <span id="repair_detail"></span>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success" id="submrepair">Send message</button>
       </div>
     </div>
   </div>
 </div>
-<script>
+<script language="Javascript" type="text/javascript">
     $('#receiveModal').on('show.bs.modal', function (event) {
   var button = $(event.relatedTarget)
   var recipient = button.data('whatever')
   var modal = $(this)
-  modal.find('.modal-title').text('รับใบแจ้งซ่อม ' + recipient)
-  //modal.find('.modal-body input').val(recipient+1)
-  modal.find('.modal-body input#repair_id').val(recipient)
+  modal.find('.modal-title').text('รับใบแจ้งซ่อม : ลำดับที่ ' + recipient)
+  
+   $.getJSON('JsonData/repair_Data.php',{data: recipient},function (data) {
+        $('#repair_detail').empty().append("ผู้แจ้งซ่อม : "+data.inform+"  &nbsp;&nbsp;งาน : "+data.depName+"<br>"
+                            +"เลขครุภัณฑ์ : "+data.pd_number+"  &nbsp;&nbsp;หมายเหตุ : "+data.note+"<br>"
+                            +"อาการ : "+data.symptom+"  &nbsp;&nbsp;วันที่แจ้ง : "+data.repair_date+"<br>"+data.vital)
+        $('div.modal-body').append("<form name='frmreceive' id='frmreceive'></form>");
+                $('#frmreceive').empty().append($("<div class='form-group'><label for='datepicker1' class='control-label'>วันที่ลงทะเบียน </label><input type='text' name='datepicker1' id='datepicker1' class='form-control' readonly required>")
+                                    ,$("<div class='form-group' id='repairer_sel'></div>")
+                                    ,$("<input type='hidden' class='form-control' id='repair_id' name='repair_id'>")
+                                    ,$("<input type='hidden' class='form-control' id='method' name='method'>"));
+                    $('#repairer_sel').empty().append("<label for='repairer' class='control-label'>เลือกผู้ซ่อม</label><select name='repairer' id='repairer' class='form-control select2'></select>");
+                    $.getJSON('JsonData/dep_com.php', function (GD) {
+                                    for (var key in GD) {
+                                        //if(GD[key].pd_id==data.pd_id){var select='selected';}else{var select='';}
+                                              $("select#repairer").append($("<option value='"+GD[key].empno+"'> "+GD[key].fullname+"</option>"));
+                                    }//$(".select2").select2();
+                                });
+                                var DP = new DatepickerThai();
+                                DP.GetDatepicker('#datepicker1');
+                                modal.find('.modal-body input#repair_id').val(recipient)
+                                modal.find('.modal-body input#method').val('receive_repair')
+                                
+                                $("button#submrepair").click(function () {
+        				$.ajax({
+					   type: "POST",
+					   url: "process/prcrepair.php",
+                                           data: $("#frmreceive").serialize(),
+					   success: function(result) {
+						alert(result);
+                                                modal.modal('hide');
+                                                $("#index_content").empty().load('content/list_repair_order.html');
+					   }
+					 });
+        });
+    });
 })
+   
 </script>
