--- a/content/list_repair_result.html
+++ b/content/list_repair_result.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 <!---------------------------- Modal ---------------------------->
-<div class="modal" id="detailModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal" id="detailModal" role="dialog" aria-labelledby="exampleModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -61,7 +61,7 @@
 
 
 <!---------------------------- Modal ---------------------------->
-<div class="modal" id="receiveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal" id="receiveModal" role="dialog" aria-labelledby="exampleModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -98,22 +98,24 @@
                                     ,$("<div class='form-group' id='rece_pd_sel'></div>")
                                     ,$("<input type='hidden' class='form-control' id='repair_id' name='repair_id'>")
                                     ,$("<input type='hidden' class='form-control' id='method' name='method'>"));
-                    $('#cause_sel').empty().append("<label for='cause' class='control-label'>สรุปอาการเสีย</label><select name='cause' id='cause' class='form-control select2'></select>");
+                    $('#cause_sel').empty().append("<label for='cause' class='control-label'>สรุปอาการเสีย</label><select name='cause' id='cause' class='form-control'></select>");
                     $('#rece_pd_sel').empty().append("<label for='repairer' class='control-label'>ผู้รับการซ่อม</label><select name='rece_pd' id='rece_pd' class='form-control select2'></select>");
+                                $("select#cause").addClass("select2");
                     $("select#cause").append($("<option value=''> เลือกสรุปอาการเสีย </option>"));
                     $.getJSON('JsonData/emp_Data.php', function (GD) {
                                     for (var key in GD) {
                                         //if(GD[key].pd_id==data.pd_id){var select='selected';}else{var select='';}
                                               $("select#cause").append($("<option value='"+GD[key].empno+"'> "+GD[key].fullname+"</option>"));
-                                    }$(".select2").select2();
+                                    }//$(".select2").select2();
                                 });
                     $("select#rece_pd").append($("<option value=''> เลือกผู้รับการซ่อม </option>"));
                     $.getJSON('JsonData/emp_Data.php', function (GD) {
                                     for (var key in GD) {
                                         //if(GD[key].pd_id==data.pd_id){var select='selected';}else{var select='';}
                                               $("select#rece_pd").append($("<option value='"+GD[key].empno+"'> "+GD[key].fullname+"</option>"));
-                                    }$(".select2").select2();
+                                    }//$(".select2").select2();
                                 });
+                                $(".select2").select2();
                                 var DP = new DatepickerThai();
                                 DP.GetDatepicker('#datepicker1');
                                 DP.GetDatepicker('#datepicker2');
