develop : result repair new record form 30/11/60

--- a/content/list_repair_order.html
+++ b/content/list_repair_order.html
@@ -8,7 +8,7 @@
     //var column1 = '{"รายการความเสี่ยงที่รอ RM man มาตรวจสอบ":["เลขที่","รายการ","เกิดขึ้นเมื่อ","ได้รับเมื่อ"]}';
     var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","หมายเหตุ","อาการ","งาน","ความสำคัญ","ผู้แจ้ง","รับใบแจ้ง","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
-              CTb.GetNewTableAjax('contentTB','JsonData/DT_LRP.php','JsonData/tempSendData.php',column1,'AddRepair',true,true,'#receiveModal',false,null,'dbtb');
+              CTb.GetNewTableAjax('contentTB','JsonData/DT_LRP.php','JsonData/tempSendData.php',column1,'AddRepair',true,false,null,true,'#receiveModal','dbtb');
 </script>
 <div class="row">
     <div class="col-md-12">
