--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     AddProds(content,result);
       }else if(getfunc=='AddRepair'){
     AddRepair(content,result);
+      }else if(getfunc=='RecRepair'){
+    RecRepair(content,result);
       }
     }
 });
@@ -132,6 +134,7 @@
     <script src="js/gen_menu.js" type="text/javascript"></script>
     <script src="js/add_prods.js" type="text/javascript"></script>
     <script src="js/add_repair.js" type="text/javascript"></script>
+    <script src="js/rec_repair.js" type="text/javascript"></script>
 <!------------------------ End My scripts ------------------------>     
     <script type="text/javascript">
             function getURL(objN){
