develop : receive repair 07/12/60

--- a/content/list_repair_result.html
+++ b/content/list_repair_result.html
@@ -1,7 +1,7 @@
-            <h2 style="color: blue">รายการแจ้งซ่อมครุภัณฑ์คอมพิวเตอร์</h2>
+            <h2 style="color: #FFC414">รายการซ่อมครุภัณฑ์คอมพิวเตอร์</h2>
             <ol class="breadcrumb">
               <li><a href="index.html"><i class="หน้าหลัก"></i> หน้าหลัก</a></li>
-              <li class="active"><i class="fa fa-wrench"></i> รายการแจ้งซ่อม</li>
+              <li class="active"><i class="fa fa-wrench"></i> รายการซ่อม</li>
             </ol>
              
 <script language="Javascript" type="text/javascript">
@@ -14,7 +14,7 @@
     <div class="col-md-12">
             <div class="box box-primary box-solid">
                 <div class="box-header with-border">
-                    <h4 class="box-title"><i class="fa fa-star"></i> รายการแจ้งซ่อมครุภัณฑ์คอมพิวเตอร์ </h4>
+                    <h4 class="box-title"><i class="fa fa-star"></i> รายการซ่อมครุภัณฑ์คอมพิวเตอร์ </h4>
                     <div class="box-tools pull-right">
                         <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
                     </div><!-- /.box-tools -->
