--- a/login_page.html
+++ b/login_page.html
@@ -28,7 +28,7 @@
       </div><!-- /.login-logo -->
       <div class="login-box-body">
         <p class="login-box-msg">เข้าสู่ระบบเพื่อเริ่มใช้งาน</p>
-        <form action="process/check_login.php" method="post">
+        <form id="frmlogin" name="frmlogin" method="post">
           <div class="form-group has-feedback">
               <input type="text" class="form-control" placeholder="Username" name="user_account" required>
             <span class="glyphicon glyphicon-user form-control-feedback"></span>
@@ -58,14 +58,28 @@
               $("head").prepend($("<title></title>").text("ระบบบริหารความเสี่ยง"),$("<link rel='SHORTCUT ICON' href='"+data.logo+"'>"));  
           });
     </script>
-    <script>
-      $(function () {
-        $('input').iCheck({
-          checkboxClass: 'icheckbox_square-blue',
-          radioClass: 'iradio_square-blue',
-          increaseArea: '20%' // optional
-        });
-      });
+    <script type="text/javascript">
+    $(function () {
+        $("button:submit").click(function(e) {
+                                        e.preventDefault();
+        				$.ajax({
+					   type: "POST",
+					   url: "process/check_login.php",
+                                           data: $("#frmlogin").serialize(),
+					   success: function(result) {
+                                               alert(result);
+                                               KillMe();self.focus();window.opener.location.reload();
+					   }
+					 });
+                    });
+    });
     </script>
+    <script language="JavaScript" type="text/javascript">
+            var StayAlive = 1; // เวลาเป็นวินาทีที่ต้องการให้ WIndows เปิดออก 
+            function KillMe()
+            {
+                setTimeout("self.close()", StayAlive * 1000);
+            }
+        </script>
   </body>
 </html>
