--- a/content/list_repair_result.html
+++ b/content/list_repair_result.html
@@ -8,7 +8,8 @@
     //var column1 = '{"รายการความเสี่ยงที่รอ RM man มาตรวจสอบ":["เลขที่","รายการ","เกิดขึ้นเมื่อ","ได้รับเมื่อ"]}';
     var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","รายละเอียด","บันทึกผลการซ่อม","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
-              CTb.GetNewTableAjax('contentTB','JsonData/DT_LRRP.php','JsonData/tempSendData.php',column1,'AddRepair',true,true,'RecRepair',true,'#detailModal',false,null,'dbtb');
+              CTb.GetNewTableAjax('contentTB','JsonData/DT_LRRP.php','JsonData/tempSendData.php',column1
+              ,'AddRepair',true,true,'RecRepair',true,'#detailModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
 </script>
 <div class="row">
     <div class="col-md-12">
