--- a/content/list_send_result.html
+++ b/content/list_send_result.html
@@ -8,7 +8,8 @@
     //var column1 = '{"รายการความเสี่ยงที่รอ RM man มาตรวจสอบ":["เลขที่","รายการ","เกิดขึ้นเมื่อ","ได้รับเมื่อ"]}';
     var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","พิมพ์ใบส่งซ่อม","บันทึกผลการส่งซ่อม"];
               var CTb = new createTableAjax();
-              CTb.GetNewTableAjax('contentTB','JsonData/DT_LSRP.php','JsonData/tempSendData.php',column1,null,false,false,null,true,'#receiveReModal',true,'content/sendRepairPDF.php','dbtb');
+              CTb.GetNewTableAjax('contentTB','JsonData/DT_LSRP.php','JsonData/tempSendData.php',column1
+              ,null,false,false,null,true,'#receiveReModal',true,'content/sendRepairPDF.php','เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
 </script>
 <div class="row">
     <div class="col-md-12">
