--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     <script src="js/add_prods.js" type="text/javascript"></script>
     <script src="js/add_repair.js" type="text/javascript"></script>
     <script src="js/rec_repair.js" type="text/javascript"></script>
+    <script src="js/genReceiveRepair.js" type="text/javascript"></script> 
 <!------------------------ End My scripts ------------------------>     
     <script type="text/javascript">
             function getURL(objN){
