--- a/content/list_repair_result.html
+++ b/content/list_repair_result.html
@@ -9,7 +9,7 @@
     var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","รายละเอียด","บันทึกผลการซ่อม","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LRRP.php','JsonData/tempSendData.php',column1
-              ,'AddRepair',true,true,'RecRepair',true,'#detailModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
+              ,'AddRepair',true,true,'RecRepair',true,'detailModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
 </script>
 <div class="row">
     <div class="col-md-12">
@@ -44,20 +44,21 @@
   </div>
 </div>
 <script language="Javascript" type="text/javascript">
+    function detailModal () {
     $('#detailModal').on('show.bs.modal', function (event) {
   var button = $(event.relatedTarget)
   var recipient = button.data('whatever')
   var modal = $(this)
   modal.find('.modal-title').text('รายละเอียดใบแจ้งซ่อม : ลำดับที่ ' + recipient)
   
-   $.getJSON('JsonData/repair_Data.php',{data: recipient},function (data) {console.log(data.inform);
+   $.getJSON('JsonData/repair_Data.php',{data: recipient},function (data) {
         $('span#detail').empty().append("ผู้แจ้งซ่อม : "+data.inform+"  &nbsp;&nbsp;งาน : "+data.depName+"<br>"
                             +"เลขครุภัณฑ์ : "+data.pd_number+"  &nbsp;&nbsp;หมายเหตุ : "+data.note+"<br>"
                             +"อาการ : "+data.symptom+"<br>วันที่แจ้ง : "+data.repair_date+" &nbsp;&nbsp;<b style='color: red;'>"+data.vital+"</b>  &nbsp;&nbsp;วันที่รับใบแจ้ง : "+data.receive_date);
 
     });
 })
-   
+    }  
 </script>
 
 
