--- a/content/list_send_result.html
+++ b/content/list_send_result.html
@@ -9,7 +9,7 @@
     var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","พิมพ์ใบส่งซ่อม","บันทึกผลการส่งซ่อม"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LSRP.php','JsonData/tempSendData.php',column1
-              ,null,false,false,null,true,'#receiveReModal',true,'content/sendRepairPDF.php','เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
+              ,null,false,false,null,true,'receiveReModal',true,'content/sendRepairPDF.php','เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
 </script>
 <div class="row">
     <div class="col-md-12">
@@ -46,6 +46,7 @@
   </div>
 </div>
 <script language="Javascript" type="text/javascript">
+    function receiveReModal () {
     $('#receiveReModal').on('show.bs.modal', function (event) {
   var button = $(event.relatedTarget)
   var recipient = button.data('whatever')
@@ -108,5 +109,5 @@
         });
     });
 })
-   
+    }   
 </script>
