--- a/content/list_prods.html
+++ b/content/list_prods.html
@@ -9,7 +9,7 @@
     var column1 = ["id","เลขครุภัณฑ์","ชื่อ","งาน","ติดตั้งเมื่อ","วันที่ย้าย","หมายเหตุ","สถานะ","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LP.php','JsonData/tempSendData.php',column1
-              ,'AddProds',true,false,null,false,null,false,null,null,null,null,null,'dbtb');
+              ,'AddProds',true,false,null,false,null,false,null,'ส่งคืน',null,null,'ปรกติ','dbtb');
               //CTb.GetNewTableAjax('tableDiv','JsonData/DT_LP.php','content/testSendDatat.php',column1,'dbtab');
               
 </script>
