--- a/content/about.html
+++ b/content/about.html
@@ -3,13 +3,9 @@
                 <h3 class="panel-title"><img src='images/ninja.ico' width='25'> เกี่ยวกับเรา</h3>
             </div>
             <div class="panel-body">
-                <center><h5><b>ทีมพัฒนา v.2.0</b></h5>
+                <center><h5><b>ผู้พัฒนา v.1.0</b></h5>
                 <div class="alert alert-success">
-                    นายวิรัช วัฒนา : วิเคราะห์และออกแบบระบบ<br>
-                    ตำแหน่ง ประธานคณะกรรมการความเสี่ยง<br>
-                    นายสมิง  ศรีบุตรตา : วิเคราะห์และออกแบบระบบ<br>
-                    ตำแหน่ง นักวิชาการคอมพิวเตอร์<br>
-                    นายฐาปนพงศ์  ดีอุดมจันทร์ : เขียนโปรแกรม, ออกแบบระบบ<br>
+                    นายฐาปนพงศ์  ดีอุดมจันทร์ : เขียนโปรแกรม, วิเคราะห์และออกแบบระบบ<br>
                     ตำแหน่ง นักวิชาการคอมพิวเตอร์<br>
                     <font color="blue">โรงพยาบาลจิตเวชเลยราชนครินทร์</font>
                 </div>
@@ -20,7 +16,7 @@
                 <center><h5><b>Power By</b></h5></center>
                 <div class="alert alert-danger">
                     <img src="images/Power By/PHPMysql.png" width="100"> <img src="images/Power By/html_css.png" width="100"> <img src="images/Power By/bootstrap.png" width="100">
-                    <img src="images/Power By/Javascript.png" width="100"> <img src="images/Power By/HighC harts.jpg" width="100"> <img src="images/Power By/FullCalendra.jpg" width="100">
+                    <img src="images/Power By/Javascript.png" width="100"> <img src="images/Power By/jquery_logo.png" width="100"> <img src="images/Power By/HighC harts.jpg" width="100"> <img src="images/Power By/FullCalendra.jpg" width="100">
                 </div>
                 </center>
             </div>
